# IQuest-Coder-V1

./: README.md
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/: .gitignore  .gitmodules  README.md  pyproject.toml
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/benchmark/: eval_swe_verified.sh
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/benchmark/bench/loopcoder/: loopcoder.sh
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/src/r2egym/: bash_utils.py  logging.py
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/src/r2egym/agenthub/: __init__.py
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/src/r2egym/commit_models/: commit_to_ast.py  diff_classes.py  entity_utils.py  parse_diff.py
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/src/r2egym/docker_bash_utils/: docker_list_tags.py  docker_list_tags_remove_local.py  remove_containers.sh  remove_images.sh
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/src/r2egym/install_utils/: aiohttp_install.sh  bokeh_install.sh  bokeh_install_varied.sh  coveragepy_install.sh  datalad_install.sh  datalads_conftest.py  get_bokeh_install_commands.py  get_numpy_install_commands.py  get_pandas_install_commands.py  install_bokeh_versions.sh  numpy_install.sh  orange3_install.sh  pandas_install.sh  pillow_install.sh  process_aiohttp_updateasyncio.py  pyramid_install.sh  scrapy_install.sh  sympy_install.sh  tornado_install.sh  tornado_unittest_runner.py  unittest_custom_runner.py
IQuest-Coder-Eval/SWE-Verified/R2E-Gym/src/r2egym/repo_analysis/: add_github_issue_to_commit.py  analyze_stored_exection_results.py  analyze_testable_commits.py  build_syn_issue.py  collect_issue_content.py  (+14 more)
(+68 files in other folders)
